s.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
/* Reset some default styles */
body, html {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    /* overflow-x: hidden; */
}

/*Stripe styles*/
.stripe{
    display: flex;
    justify-content: center;
    padding: 5px 0px;  
    color: white; 
    font-size: medium;
    background-color: #296e9f;
    text-align: center;
}

.stripe > ul {
    margin: unset;
    list-style:none;
}

.stripe > ul li{
    display:inline-block; 
    padding:0 30px; 
    position:relative;
}

.stripe >ul li:not(:last-child)::after{
    content:""; 
    border:1px solid #e2e2e2;
    border-width: 1px 1px 0 0;
    position:absolute; 
    right:-3px; 
    top:0; 
    height:100%;
}

/* Navbar styles */
.navbar {
    background-color: #3085C3;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    position: sticky;
    top: 0;
    z-index: 999;
}

.logo img {
    max-width: 100px;
    max-height: 100px;
    size: 75%;
    border-radius: 10%;
    transition: transform 0.3s ease; /* Add a subtle transform animation on hover */
}

.logo img:hover {
    transform: scale(1.1); /* Increase size on hover */
}

.search-bar {
    flex: 1;
    margin: 0 20px;
    display: flex;
    align-items: center;
    background-color: #fff;
    border-radius: 5px;
    padding: 5px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}

.search-bar input {
    width: 100%;
    padding: 10px;
    border: none;
    border-radius: 5px;
    outline: none;
}

.search-bar i {
    margin-left: 10px;
    color: #3085C3;
    font-size: 20px;
    cursor: pointer;
}

.cart-button button,
.login-button button {
    background-color: #f1f3f4;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    margin-left: 10px;
    cursor: pointer;
    color: rgb(24, 22, 22);
    transition: background-color 0.3s ease; /* Add smooth background color transition on hover */
}

.cart-button button:hover,
.login-button button:hover {
    background-color: #87b5e7; /* Change background color on hover */
}

/* Carousel styles */
.carousel-section {
    width: 100%;
    overflow: hidden;
}

.carousel-container {
    display: flex;
    animation: scroll 10s linear infinite;
}

.carousel-slide {
    min-width: 100%;
    flex: 1;
}

.carousel-slide img {
    width: 100%;
    height: auto;
}


@keyframes scroll {
    0% {
        transform: translateX(0%);
    }
    20% {
        transform: translateX(0%);
    }
    25% {
        transform: translateX(-100%);
    }
    45% {
        transform: translateX(-100%);
    }
    50% {
        transform: translateX(-200%);
    }
    70% {
        transform: translateX(-200%);
    }
    75% {
        transform: translateX(-300%);
    }
    95% {
        transform: translateX(-300%);
    }
    100% {
        transform: translateX(-400%);
    }
}

/* Offer Section styles */
.offer-section {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 20px;
    text-align: center;
    background-color: #5CD2E6;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.offer-card {
    text-align: center;
}

.offer-card img {
    width: 100%;
    height: 100%;
    border-radius: 10px;
    transition: transform 0.3s ease; /* Add transform animation on hover */
}

.offer-card:hover img {
    transform: scale(1.05); /* Increase size on hover */
}

/* Personal Section styles */
.personal-section {
    text-align: center;
    padding: 20px;
}

.personal-section h2 {
    color: #333;
}

.personal-cards {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.personal-card img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 2px solid #3085C3;
    transition: transform 0.3s ease; /* Add transform animation on hover */
}

.personal-card:hover img {
    transform: scale(1.1); /* Increase size on hover */
    border-color: #007bff; /* Change border color on hover */
}

/* Product Section styles */
.product-section {
    text-align: center;
    padding: 20px;
}

.product-section h2 {
    color: #333;
}

.product-cards {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.product-card {
    text-align: center;
    background-color: #f5f5f5;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease; /* Add transform animation on hover */
}

.product-card img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
}

.product-card:hover {
    transform: scale(1.05); /* Increase size on hover */
}

.rating {
    font-size: 24px;
    color: #ff9900;
}

/* Footer styles */
.footer {
    background-color: #3085C3;
    color: white;
    padding: 20px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.footer-links ul {
    list-style: none;
    padding: 0;
}

.footer-links li {
    display: inline;
    margin-right: 20px;
}

.footer-links a {
    text-decoration: none;
    color: white;
    transition: color 0.3s ease; /* Add smooth color transition on hover */
}

.footer-links a:hover {
    color: #007bff; /* Change color on hover */
}

/* Social links styles */
.social-links {
    margin-top: 20px;
}

.social-links a {
    text-decoration: none;
    margin-right: 10px;
    color: #333;
    font-size: 24px;
    transition: color 0.3s ease;
}

.social-links a:hover {
    color: #007bff;
}

/* * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
} */

/* body {
  display: flex;
  background: #333;
  justify-content: flex-end;
  align-items: flex-end;
  min-height: 100vh;
} */

.footer {
  position: relative;
  width: 100%;
  background: #3586ff;
  min-height: 100px;
  padding: 20px 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.social-icon,
.menu {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 10px 0;
  flex-wrap: wrap;
}

.social-icon__item,
.menu__item {
  list-style: none;
}

.social-icon__link {
  font-size: 2rem;
  color: #fff;
  margin: 0 10px;
  display: inline-block;
  transition: 0.5s;
}
.social-icon__link:hover {
  transform: translateY(-10px);
}

.menu__link {
  font-size: 1.2rem;
  color: #fff;
  margin: 0 10px;
  display: inline-block;
  transition: 0.5s;
  text-decoration: none;
  opacity: 0.75;
  font-weight: 300;
}

.menu__link:hover {
  opacity: 1;
}

.footer p {
    font-size: 1.2rem;
    color: #fff;
    margin: 10px 0;
    text-align: center;
    opacity: 0.75;
    font-weight: 300;
}

.wave {
  position: absolute;
  top: -100px;
  left: 0;
  width: 100%;
  height: 100px;
  background: url("https://i.ibb.co/wQZVxxk/wave.png");
  background-size: 1000px 100px;
}

.wave#wave1 {
  z-index: 1000;
  opacity: 1;
  bottom: 0;
  animation: animateWaves 4s linear infinite;
}

.wave#wave2 {
  z-index: 999;
  opacity: 0.5;
  bottom: 10px;
  animation: animate 4s linear infinite !important;
}

.wave#wave3 {
  z-index: 1000;
  opacity: 0.2;
  bottom: 15px;
  animation: animateWaves 3s linear infinite;
}

.wave#wave4 {
  z-index: 999;
  opacity: 0.7;
  bottom: 20px;
  animation: animate 3s linear infinite;
}

@keyframes animateWaves {
  0% {
    background-position-x: 1000px;
  }
  100% {
    background-positon-x: 0px;
  }
}

@keyframes animate {
  0% {
    background-position-x: -1000px;
  }
  100% {
    background-positon-x: 0px;
  }
}

